tests/fixtures/invalid/pow_str_float_dict.py
# Cannot call pow() with Str, Float, Dict[str, int]
x = pow("hello", 1.0, {"a": 1})
